# docs-mcp

./: Dockerfile  README.md  pyproject.toml
deploys/: fna_docs.sh
docs/: INDEX.md  example.md
docs_mcp/: __init__.py  server.py
